; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_conf.c_conf_server_deinit.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_conf.c_conf_server_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.conf_server = type { i64, i32, i32, i32 }

@LOG_VVERB = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"deinit conf server %p\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.conf_server*)* @conf_server_deinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @conf_server_deinit(%struct.conf_server* %0) #0 {
  %2 = alloca %struct.conf_server*, align 8
  store %struct.conf_server* %0, %struct.conf_server** %2, align 8
  %3 = load %struct.conf_server*, %struct.conf_server** %2, align 8
  %4 = getelementptr inbounds %struct.conf_server, %struct.conf_server* %3, i32 0, i32 3
  %5 = call i32 @string_deinit(i32* %4)
  %6 = load %struct.conf_server*, %struct.conf_server** %2, align 8
  %7 = getelementptr inbounds %struct.conf_server, %struct.conf_server* %6, i32 0, i32 2
  %8 = call i32 @string_deinit(i32* %7)
  %9 = load %struct.conf_server*, %struct.conf_server** %2, align 8
  %10 = getelementptr inbounds %struct.conf_server, %struct.conf_server* %9, i32 0, i32 1
  %11 = call i32 @string_deinit(i32* %10)
  %12 = load %struct.conf_server*, %struct.conf_server** %2, align 8
  %13 = getelementptr inbounds %struct.conf_server, %struct.conf_server* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  %14 = load i32, i32* @LOG_VVERB, align 4
  %15 = load %struct.conf_server*, %struct.conf_server** %2, align 8
  %16 = call i32 @log_debug(i32 %14, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), %struct.conf_server* %15)
  ret void
}

declare dso_local i32 @string_deinit(i32*) #1

declare dso_local i32 @log_debug(i32, i8*, %struct.conf_server*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
